--- a/bootstrap/8-7-18-draft/tools/styleSheets/testcss.css
+++ b/bootstrap/8-7-18-draft/tools/styleSheets/testcss.css
@@ -8,7 +8,8 @@
 	background: blue;
 }
 
-a.current {
-  background:red;
+
+a.navLink.current {
+  background:blue;
   color:white;
 }
